2009-09-19  Sebastien Pouliot  <sebastien@ximian.com>

	* TargetException.cs, TargetInvocationException.cs,
	TargetParameterCountException.cs: Inherit from Exception for 
	NET_2_1 since ApplicationException does not exists

2009-09-18  Sebastien Pouliot  <sebastien@ximian.com>

	* Assembly.cs, Module.cs: Avoid imperative CAS checks for NET_2_1

2009-08-18  Zoltan Varga  <vargaz@gmail.com>

	* MonoGenericClass.cs: Use StringComparison.Ordinal when calling
	String.EndsWith ().

2009-08-07 Rodrigo Kumpera  <rkumpera@novell.com>

	* MonoGenericClass.cs: Implement almost all methods required
	to move to inherit from System.Type. The only missing methods
	are Is(Array|Pointer|ByRef)Impl and GetElementType since the
	runtime still generates weird instances for generics instances
	of non-SRE types with SRE types as generic arguments.

2009-08-06 Rodrigo Kumpera  <rkumpera@novell.com>

	* MonoGenericClass.cs (InflateType): Add support to inflate
	generic method arguments.

	* MonoGenericClass.cs (GetMethod): Remove restriction
	with generic methods.

2009-08-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* MonoGenericClass.cs (FullName): mcs depends that FullName
	doesn't return null for instantiations over generic params
	of type builders. We special case this under compiler context.

2009-08-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* MonoGenericClass.cs: Remove Is(Array|Pointer|ByRef)Impl
	and GetElementType since the runtime still produces instances
	of MonoGenericClass for those types.

2009-08-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* MonoGenericClass.cs: Implement more methods from MonoType.
	Done with all type name related properties.

2009-08-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* MonoGenericClass.cs: Implement Is*Impl methods to simply
	return false.

2009-08-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* MonoGenericClass.cs: Implement Make(Array,ByRef,Pointer) using the
	new managed types.

2009-08-04 Rodrigo Kumpera  <rkumpera@novell.com>
